# winnow

./: .gitignore  Cargo.toml  README.md  install.sh  pyproject.toml
.github/workflows/: release.yml  rust-ci.yml
crates/winnow-core/: Cargo.toml
crates/winnow-core/src/: buckets.rs  lib.rs  metadata.rs
crates/winnow-gui/src/: app.rs  imageview.rs  main.rs
packaging/: winnow.spec
rust/: Cargo.toml
rust/crates/winnow-core/src/: model.rs  scan.rs
rust/crates/winnow-gui/: Cargo.toml
rust/crates/winnow-gui/src/: app.rs  main.rs
rust/crates/winnow-gui/src/app/: desktop.rs  grid.rs
scripts/: install-desktop.sh
src/winnow/: __init__.py  __main__.py  app.py  buckets.py  cli.py  desktop.py  details.py  grid_view.py  loader.py  main_window.py  metadata.py  model.py  scan.py  single_view.py  textutil.py
