[project]
name = "winnow"
version = "0.1.1"
description = "Fast keyboard-driven image culling / selection tool for ML data curation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6",
    "Pillow>=10.0",
    "numpy>=1.24",
    "send2trash>=1.8",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]

[project.scripts]
winnow = "winnow.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/winnow"]
